Fixed content disappearing behind sticky navbar when scrolling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ h1 {
 
 h2 {
     font-size: 22pt;
+    scroll-margin-top: 2.5em;
 }
 
 h3 {
